# surveillance-camera

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/avi_player/: CMakeLists.txt  avifile.c  mjpeg.c  mjpeg.h  vidoplayer.c
components/bus/: 8080_lcd_esp32s3.c  i2s_lcd_esp32_driver.c  spi_bus.c
components/esp32-camera/: CMakeLists.txt  Kconfig  README.md  component.mk  idf_component.yml  library.json
components/esp32-rtsp/: CMakeLists.txt  component.mk
components/esp32-rtsp/example/ipcamera/components/web_portal/: CMakeLists.txt  camera_ctrl.c  file_manage.c  file_server.c
components/esp32-rtsp/example/ipcamera/components/web_portal/include/: web_portal.h
components/esp32-rtsp/example/ipcamera/components/web_portal/www/: index_ov2640.html
components/esp32-rtsp/example/linux/: CMakeLists.txt  build.sh  server.c  v4l2uvc.c  v4l2uvc.h  yuv2jpg.c  yuv2jpg.h
components/file_server/: app_sdcard.c  file_manage.c  file_server.c  upload_script.html
components/onenet/: CMakeLists.txt  Kconfig.projbuild  component.mk  dStream.c  mqttkit.c  net_device.c  onenet.c
components/pwm_audio/: pwm_audio.c
components/screen/: component.mk  screen_driver.c  screen_driver.h
main/: CMakeLists.txt  H4001.c  Kconfig.projbuild  app_camera.c  app_httpd.c  app_led.c  app_led.h  app_main.c  app_main.h  app_sdcard.c  app_servo.c  app_sntp.c  app_sntp.h  avi_def.h  avi_process.c  avi_recorder.c  avi_recorder.h  component.mk  file_manage.c  file_manage.h  ipc_server.c  ipc_server.h  rgb.c  rgb.h
(+124 files in other folders)
